recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:4: error: not found: value occurence
	return occurence(l.tail,v);
               ^occurences:6: error: not found: value occurence
return 0 + occurence(l.tail,v);
           ^