recursion.cons.lessons.recursion.cons.Occurrence.scala.code
def occurences(l:List[Int], v:Int): Int = {

if(l.head == v){
	return occurence(l.tail,v);
}
return 0 + occurence(l.tail,v);
}
